--- a/br_styles.css
+++ b/br_styles.css
@@ -13,164 +13,310 @@
 
     */
 
-/* Universal Styles */
+
+/* 
+    • A background image 
+    • A border around a page element, including an example of a curved border 
+    • A box shadow around a page element 
+    • A text shadow around a section of element text 
+    • A background featuring a linear gradient and a radial gradient 
+    • Changing the appearance of an element using the transform property 
+    • Changing the appearance of an element using the filter property 
+    */
+
+
+
+/* HTML and Body Styles */
 
 html {
-    margin: auto;
-    position: relative;
-    background-image: linear-gradient(rgb(119, 117, 0), saddlebrown);
-    min-width: 640px;
-    max-width: 960px;
-    min-height: 100%;
+    background-image: url("br_paper.png");
+    font-size: 12px;
+    font-family: Tahoma, Geneva, sans-serif;
 }
 
 body {
-    background-color: rgb(70, 51, 0);
-    border-style: inset;
-    border-color: antiquewhite;
-    border-width: .25em;
+    filter: drop-shadow(10px 10px 50px rgb(51, 51, 51));
+    background-color: rgb(255, 222, 179);
+    margin: 0px auto;
+    width: 90%;
+    max-width: 1100px;
+    min-width: 720px;
+    border: groove 5px black;
 }
 
+/* Body Header Navigation Styles */
 
-/* Header & Nav Styles */
+body>header {
+    background-color: antiquewhite;
+    height: 175px;
+    margin-bottom: 30px;
+    position: relative;
+    border: .25em solid rgb(0, 167, 167)
+}
 
-header img {
-    width: 99%;
+body>header>nav.toplinks {
+    float: right;
+    margin: 10px;
+    width: 40%;
+}
+
+body>header>nav.toplinks li {
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
+    font-size: 0.9em;
     float: left;
-    border: .25em;
-    border-style: inset;
-    border-color: brown;
+    letter-spacing: 0.1em;
+    margin-top: 50px;
+    width: 33.3%;
+    text-align: center;
 }
 
+nav.toplinks li a:visited,
+nav.toplinks li a:link {
+    color: rgb(151, 151, 151);
+}
 
-nav {
-    list-style-type: none;
-    font-size: 1em;
-    padding: .36em .5em;
+nav.toplinks li a:active,
+nav.toplinks li a:hover {
+    color: rgb(170, 123, 20);
+}
+
+body>header nav.tabs {
+    position: absolute;
+    bottom: 0px;
+    height: 220px;
+    width: 100%;
+}
+
+body>header nav.tabs::after {
     clear: both;
     content: "";
+    display: table;
+}
+
+body>header>nav.tabs>ul {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
+
+body>header nav.tabs li {
+    background-color: rgb(183, 146, 26);
+    display: block;
     float: left;
-    font-family: 'Courier New', Courier, monospace;
-    border-style: inset;
-    border-color: brown;
-    border-width: .15em;
-    background-color: saddlebrown;
+    height: 30%;
+    letter-spacing: 3px;
+    line-height: 40px;
+    margin-left: 0%;
+    margin-right: 2%;
+    width: 15%;
 }
 
-
-nav a:visited {
-    color: azure;
+body>header nav.tabs li:first-of-type {
+    margin-left: 15%;
 }
 
-
-nav a:hover {
-    color: black;
+body>header nav.tabs li:last-of-type {
+    margin-right: 2%;
 }
 
-
-/* Grid Based Styles */
-
-div {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    outline: 2em;
-    clear: right;
-    font-size: 1.09em;
+body>header nav.tabs li a {
+    color: rgb(17, 0, 255);
+    display: block;
     text-align: center;
+    width: 100%;
 }
 
-
-div a {
-    text-decoration: none;
+body>header nav.tabs {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-/* All div hyperlinks have their text decoration removed of underlines. */
-
-div.row {
-    margin: 0 auto;
+body>header nav.tabs li {
+    transform: perspective(50px) rotateX(20deg);
 }
 
-/* All divs with the "row" class have no vertical magin with also an automatic horizontal margin. */
+body>header nav.tabs li:hover {
+    background-color: rgb(231, 231, 231);
+}
 
-.column1 {
-    margin-right: 1em;
+/* section layout */
+
+section#left {
+    margin-top: 25px;
     float: left;
+    padding-bottom: 20px;
+    width: 20%;
+}
+
+section#center {
+    margin-top: 25px;
+    float: left;
+    padding-bottom: 20px;
     width: 50%;
 }
 
-/* All elements with a class of "column1" have their right margin increased by 1em, are floated to the left,
-and have a width of 50%. */
-
-.column2 {
-    margin-left: 1em;
-    float: right;
-    width: 50%;
-}
-
-/* All elements with a class of "column2" their left margin increased by 2em, are floated to the right,
-and have a width of 50%. */
-
-div a:visited {
-    color: burlywood;
-}
-
-/* All div hyperlinks are a color of "burlywood", wether they are visisted or not. */
-
-div a:hover {
-    color: brown;
-}
-
-/* When said hyperlinks are hovered however, they change their color to a very different shade of "brown". */
-
-/* Section Styles */
-
-h1.main {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 3em;
-    text-align: center;
-    color: azure;
-}
-
-
-h2.heading {
-    size: 7em;
+section#right {
+    margin-top: 25px;
     float: left;
+    padding-bottom: 20px;
+    width: 30%;
 }
 
-section h2 {
+/* Left Section */
+
+section#left h1 {
+    border-radius: 25px;
+}
+
+section#left nav.vertical {
+    border: 1px solid rgb(20, 167, 170);
+    border-radius: 25px;
+    background-color: white;
+    margin: 0px auto 20px;
+    width: 80%;
+}
+
+section#left nav.vertical h1 {
+    color: white;
+    background-color: rgb(170, 131, 22);
+    font-size: 1.1em;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    width: 100%;
+}
+
+section#left nav.vertical ul li {
+    font-size: 12px;
+    line-height: 2;
+    margin: 5px 0px 5px 20px;
+}
+
+section#left nav.vertical ul li:last-of-type {
+    margin-bottom: 20px;
+}
+
+section#left nav.vertical a {
+    color: rgb(151, 151, 151);
+}
+
+section#left nav.vertical a:hover {
     text-decoration: underline;
 }
 
-section {
-    color: rgb(102, 41, 0);
-    margin: 2.5em;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding: 0.5em;
-    background-color: ivory;
-    text-align: left;
-    border-style: inset;
-    border-color: brown;
-    border-width: .25em;
+/* Center section */
+
+section#center article {
+    background-color: rgb(191, 191, 191);
+    font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0px auto;
+    padding: 20px;
+    width: 95%;
 }
 
-section::first-letter {
+section#center article header h1 {
+    font-size: 2.5em;
+    font-weight: normal;
+    margin: 10px;
+}
+
+section#center article header h2 {
+    font-size: 1.8em;
+    font-weight: normal;
+    margin-top: 15px;
+}
+
+section#center img#dishimg {
+    width: 55%;
+    float: left;
+    margin: 15px;
+}
+
+section#center article p:first-of-type {
+    color: rgb(20, 127, 130);
     font-size: 1.5em;
+    line-height: 1.2em;
+    margin: 10px 5px;
 }
 
-h2 img {
+article p:last-of-type {
+    clear: left;
+    font-size: 1.2em;
+    color: rgb(0, 167, 167);
+    margin: 0px 0px 20px 15px;
+}
+
+article p:last-of-type a {
+    color: rgb(0, 167, 167);
+}
+
+/* Aside Styles */
+
+section#center aside {
     float: right;
-    margin-right: 1em;
-    width: 3em;
-    height: 3em;
-    border: .1em;
-    border-style: inset;
-    border-color: aqua
+    margin: 45px 15px;
+    width: 35%;
 }
 
+section#center aside h1 {
+    color: white;
+    font-size: 1.2em;
+    font-weight: normal;
+    text-align: center;
+    background-color: rgb(0, 167, 167);
+    height: 2.5em;
+    line-height: 2.5em;
+}
+
+section#center aside ul {
+    margin-left: 0px;
+}
+
+section#center aside li {
+    color: rgb(51, 51, 51);
+    font-size: 1em;
+    line-height: 2.5em;
+    height: 2.5em;
+    padding-left: 10px;
+    margin-left: 0px;
+}
+
+section#center aside li:nth-of-type(odd) {
+    background-color: rgb(191, 191, 191);
+}
+
+section#center aside li:nth-of-type(even) {
+    background-color: white;
+}
+
+section#center aside li a {
+    color: rgb(101, 101, 101);
+}
+
+section#center h2 {
+    font-size: 1.8em;
+    color: rgb(101, 101, 101);
+    clear: left;
+    font-weight: normal;
+    margin: 40px 0px 10px 15px;
+}
+
+section#center li {
+    font-size: 1.1em;
+    color: rgb(101, 101, 101);
+    margin-left: 15px;
+    margin: 10px;
+    line-height: 1.3em;
+}
 
 /* Footer Styles */
 
 footer {
+    background-color: rgb(133, 20, 12);
+    clear: left;
+    margin-top: 25px;
     text-align: center;
-    clear: both;
-    color: bisque;
+    padding: 10px;
+    color: rgb(255, 164, 164);
 }
